--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: LDRAlighieri Lair
 
 # Short description of your site
-description: Vladimir Raupov personal site about Android and iOS development
+description: Vladimir Raupov personal site about Android and iOS development.
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
@@ -252,6 +252,7 @@ prose:
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-seo-tag
 
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
