--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,7 @@ baseurl: ""
 # List of links in the navigation bar
 navbar-links:
   Home: "https://ldralighieri.github.io"
-  Projects:
-    - Corbind: "https://ldralighieri.github.io/Corbind/"
+  Projects: "projects"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
