--- a/_config.yml
+++ b/_config.yml
@@ -59,18 +59,19 @@ page-img: "/img/bgimage.png"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Vladimir Raupov
+  name: Saba Etezad Razavi
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
 # You can reorder the items to define the link order.
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
-  github: ldralighieri
-  linkedin: ldralighieri
-  email: "GLDRAlighieri@gmail.com"
-  twitter: ldralighieri
-  reddit: ldralighieri
+  github: SabaEtezadRazavi
+  linkedin: Saba Etezad Razavi
+  email: "s_etezadrazavi@yahoo.com"
+  email: " saba.etezad@physics.sharif.edu"
+  #twitter: ldralighieri
+  #reddit: ldralighieri
 #  rss: false
 #  facebook:
 #  xing: yourname
@@ -93,7 +94,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "LDRAlighieri.github.io"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "sabaetezadrazavi.github.io"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
