--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ footer-link-col: "#404040"
 
 # navbar-img: "/img/bgimage.png"
 # footer-img: "/img/bgimage.png"
-page-img: "/img/bkimage.jpg"
+page-img: "/img/bkimage.png"
 
 # --- Footer options --- #
 
