--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: It's my personal webiste!
 url: "https://sabaetezadrazavi.github.io"
 baseurl: ""
 
-# If you are building a GitHub project page then use these settings:
+# If you are building a GitHub page then use these settings:
 #url: "http://username.github.io/projectname"
 #baseurl: "/projectname"
 
@@ -38,7 +38,7 @@ avatar: "/img/avatar.jpg"
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
 navbar-col: "#F5F5F5"
-navbar-text-col: "#404040"
+navbar-text-col: "c0c0c0" #"#404040"
 navbar-children-col: "#F5F5F5"
 page-col: "#F5F5F5" #"#FFFFFF"
 link-col: "#008AFF"
