--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   github: SabaEtezadRazavi
-  linkedin: Saba Etezad Razavi
+  linkedin: saba-etezad-razavi
   email: "s_etezadrazavi@yahoo.com"
   email: " saba.etezad@physics.sharif.edu"
   #twitter: ldralighieri
