--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,8 @@ baseurl: ""
 navbar-links:
   Home: "https://sabaetezadrazavi.github.io"
   Research: "Research"
+  Outside Physics: "Outside"
+  Blog: "Blog"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
