--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ avatar: "/img/avatar.jpg"
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
 navbar-col: "#FFFFFF"
-navbar-text-col: "#404040"
+navbar-text-col: "#c0c0c0" #"#404040"
 navbar-children-col: "#F5F5F5"
 page-col: "#FFFFFF"
 link-col: "#c0c0c0" #"#008AFF"
