--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,8 @@ navbar-links:
   Research: "Research"
   Outside Physics: "OutsideWork"
   Blog: "Blog"
-
+  Outreach: "Outreach"
+  
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
 avatar: "/img/avatar.jpg"
