--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ theme: hitchens-theme
 
 
 # Name of website
-title: Saba Etezad Razavi
+title: Saba Etezad-Razavi's personal homepage
 
 # Short description of your site
 description: It's my personal webiste!
@@ -67,7 +67,7 @@ footer-img: "/img/bkimage.png"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Saba Etezad Razavi
+  name: Saba Etezad-Razavi
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
@@ -77,7 +77,7 @@ social-network-links:
   github: SabaEtezadRazavi
   linkedin: saba-etezad-razavi
   email: "s_etezadrazavi@yahoo.com"
-  email: " saba.etezad@physics.sharif.edu"
+  email: " setezadrazavi@uchicago.edu"
   #twitter: ldralighieri
   #reddit: ldralighieri
 #  rss: false
