--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: Saba Etezad-Razavi's personal homepage
+title: Saba Etezad-Razavi
 
 # Short description of your site
 description: It's my personal webiste!
